Made changes to make backend compatible with frontend